increased Java Heap (4g) + added new columns for distances (photo, geom)